--- a/ASYNCNAWAIT.HTML
+++ b/ASYNCNAWAIT.HTML
@@ -6,16 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <H2 ID="RESULT"></H2>
+    <H3 ID="summer"></H3>
     <SCRIPT>
         async function add(v,t){
             response=await v+t;
             display(response)
         }
         function display(some){
-            document.getElementById("RESULT").innerHTML=some;
+            document.getElementById("summer").innerHTML=some;
         }
-        add(12,16)
+        add(2,37)
     </SCRIPT>
 </body>
 </html>
