--- a/digiClock.html
+++ b/digiClock.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="MyClockDisplay" onload="showTime()">
+    <div id="DateDisplay"></div>
 
-    </div>
-    <script src="digiclock.js"></script>
 </body>
 </html>
