--- a/hhhhhhh.html
+++ b/hhhhhhh.html
@@ -1,4 +1,18 @@
- function showDate() {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Date Display Application</title>
+    
+</head>
+<body>
+
+    <div id="DateDisplay">Loading...</div>
+
+    <script>
+        function showDate() {
             var date = new Date();
             var day = date.getDate();
             var month = date.getMonth() + 1; // Months are zero-indexed
@@ -13,3 +27,7 @@
         }
 
         showDate();
+    </script>
+
+</body>
+</html>
