--- a/dice.html
+++ b/dice.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="dice.css">
+    <style>
+        body{
+            background-color: cadetblue;
+        }
+    </style>
 </head>
-<body>
+<body >
     
-    <h2>Rolling Dice</h2>
-    <div>click on the dice!</div>
+    <h2>Random Numbers</h2>
+    <div>click on the box!</div>
     <div id="dice" onclick="stopstart()"></div>
      <script src="dice.js"></script>
 </body>
