--- a/slider.html
+++ b/slider.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     body{
-        background-color: rgb(230, 233, 63);
+        background-color: bisque;
     }
     .carousel-container {
         display:flex;
@@ -26,8 +26,9 @@
 <body>
     <section class="carousel-container">
 
-        <img class="myslides" src="https://cdn.pixabay.com/photo/2024/02/01/12/19/grasses-8545863_640.jpg" style="height:500px">
-        <img class="myslides" src="https://cdn.pixabay.com/photo/2023/10/18/18/59/tomatoes-8324940_640.jpg" style="height:500px">
+        <img class="myslides" src="https://cdn.pixabay.com/photo/2021/04/09/22/03/strawberries-6165597_640.jpg">
+        <img class="myslides" src="https://cdn.pixabay.com/photo/2024/02/20/09/13/cookies-8585032_640.png">
+        <img class="myslides" src="https://cdn.pixabay.com/photo/2016/04/09/09/22/pizza-1317699_640.jpg">
     </section>
     <script>
         var myIndex =0;
